added photos from the day, removed registration page from being visible

--- a/brak/index.html
+++ b/brak/index.html
@@ -45,10 +45,13 @@
 
                 <div class="desktop">
                     <h3>
-                        <a href="register">Register</a>
-                        &nbsp;&nbsp;
-                        &nbsp;&nbsp;
+                        <!-- <a href="register">Register</a> -->
+                        <!-- &nbsp;&nbsp; -->
+                        <!-- &nbsp;&nbsp; -->
                         <a href="program">Program</a>
+                        &nbsp;&nbsp;
+                        &nbsp;&nbsp;
+                        <a href="richard">Richard</a>
                         &nbsp;&nbsp;
                         &nbsp;&nbsp;
                         <a href="photos">Photos</a>
@@ -56,8 +59,9 @@
                 </div>
                 <div class="mobile">
                     <h3>
-                        <a href="register">Register</a><br/>
+                        <!-- <a href="register">Register</a><br/> -->
                         <a href="program">Program</a><br/>
+                        <a href="richard">Richard</a>
                         <a href="photos">Photos</a>
                     </h3>
                 </div>
@@ -83,29 +87,39 @@
                 <!-- </table> -->
 
             <p>
-            On 7 February, 2022 we will be holding a symposium in memory of our
+            On 7 February, 2022 we held a symposium in memory of our
             dear friend and colleague Richard Brak.
             </p>
             <p>
-            Confirmed speakers: 
-            Mireille Bousquet-Mélou, Thomas Prellberg, Stu Whittington, Buks
-            Janse van Rensburg, Andrew Rechnitzer, Chris Soteros, Gary Iliev, 
-            Judy-anne Osborn, Nick Beaton, Jan de Gier, Tony Guttmann, Iwan
-            Jensen, and Aleks Owczarek.
+            Wonderful talks were given by Mireille Bousquet-Mélou, Thomas Prellberg, Stu Whittington, Buks Janse van Rensburg, Gary Iliev, Chris Soteros, Andrew Rechnitzer, Judy-anne Osborn, Tony Guttmann, Iwan Jensen, Aleks Owczarek, Nick Beaton, and Jan de Gier.
             </p>
             <p>
-            <b>Registration is now open!</b> Please visit the <a
-                href="register">registration</a> page to register.
+            The symposium was organised by Nathan Clisby, Tim Garoni, Tony Guttmann, and Aleks Owczarek with much assistance from Kirsten Hoak, Sandrine Procacci, and Anna Rodway.
             </p>
             <p>
-            The <a href="program">program</a> is now available.
+            It was hosted in hybrid face-to-face and online mode by the University
+            of Melbourne, with a mixture
+            of local and international participants from places including
+            France, the UK, Canada, and the USA.
+            </p>
+            <!-- <p> -->
+            <!-- <b>Registration is now open!</b> Please visit the <a -->
+            <!--     href="register">registration</a> page to register. -->
+            <!-- </p> -->
+            <p>
+            The <a href="program">program</a> page contains a list of talks,
+            with links to video recordings and pdf files.
+            </p>
+            <p>
+            Please visit this 
+            <a href="richard">page</a> to see photos of Richard in action.
             </p>
             <p>
             Please visit the 
-            <a href="photos">photos</a> page to see Richard in action.
+            <a href="photos">photos</a> page to see photos from the day.
             </p>
             <p>
-            During this symposium we will celebrate Richard, his research
+            During the symposium we celebrated Richard, his research
             contributions, and his contributions to the lattice statistical
             mechanics community and the mathematical physics community (ANZAMP)
             more broadly.
@@ -125,17 +139,17 @@
                 href="http://findingstones.com/">http://findingstones.com/</a>
             for some renderings.
             </p>
-            <p>
-            Note that there will be <a href="https://sites.google.com/view/omar-foda-workshop/home">memorial workshop</a> for Omar
-            Foda to be held at the University of Melbourne on the following day,
-            that is 8 February, 2022.
-            </p>
-            <p>
-            And, the annual <a
-                href="https://www.anzamp.org.au/meetings/2022-2/">ANZAMP
-                Meeting</a> will be held at Monash University
-            from 9-11 February, 2022.
-            </p>
+            <!-- <p> -->
+            <!-- Note that there will be <a href="https://sites.google.com/view/omar-foda-workshop/home">memorial workshop</a> for Omar -->
+            <!-- Foda to be held at the University of Melbourne on the following day, -->
+            <!-- that is 8 February, 2022. -->
+            <!-- </p> -->
+            <!-- <p> -->
+            <!-- And, the annual <a -->
+            <!--     href="https://www.anzamp.org.au/meetings/2022-2/">ANZAMP -->
+            <!--     Meeting</a> will be held at Monash University -->
+            <!-- from 9-11 February, 2022. -->
+            <!-- </p> -->
             <p>
             The symposium venue is the Evan Williams Theatre, in the Peter Hall
             Building of the University of Melbourne. Visitors should access the
