--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -163,6 +163,8 @@
                         uniform combs. This is joint work with Buks van
                         Rensburg.
                         <br /><br />
+                        <a href="../talks/RB2022_Stu.pdf">pdf</a>
+                        &nbsp;&nbsp;&nbsp;
                         <!-- <a href="https://youtu.be/jP24TlJGP9I">video</a> -->
                         <a href="https://www.youtube.com/watch?v=jP24TlJGP9I&list=PLja2--Az4ZUyriJDzuXOj8cq_Tyxbu_Dq&index=4">video</a>
                         </abstract></td>
@@ -523,6 +525,8 @@
                         uniform combs. This is joint work with Buks van
                         Rensburg.
                         <br /><br />
+                        <a href="../talks/RB2022_Stu.pdf">pdf</a>
+                        &nbsp;&nbsp;&nbsp;
                         <!-- <a href="https://youtu.be/jP24TlJGP9I">video</a> -->
                         <a href="https://www.youtube.com/watch?v=jP24TlJGP9I&list=PLja2--Az4ZUyriJDzuXOj8cq_Tyxbu_Dq&index=4">video</a>
                         </abstract></td>
