--- a/brak/index.html
+++ b/brak/index.html
@@ -151,7 +151,7 @@
             <!-- from 9-11 February, 2022. -->
             <!-- </p> -->
             <p>
-            The symposium venue is the Evan Williams Theatre, in the Peter Hall
+            The symposium venue was the Evan Williams Theatre, in the Peter Hall
             Building of the University of Melbourne. Visitors should access the
             Peter Hall Building via the western entrance as shown on the map
             below. The <span style="color:red;">red marker shows the western
