added talk by Aleks

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -364,6 +364,8 @@
                         opposite corners of a box, as well as Hamiltonian walks. We use Monte Carlo
                         simulations to verify predicted values for three key exponents.
                         <br /><br />
+                        <a href="../talks/RB2022_Aleks.pdf">pdf</a>
+                        &nbsp;&nbsp;&nbsp;
                         <!-- <a href="https://youtu.be/AjFRxOmpVFk">video</a> -->
                         <a href="https://www.youtube.com/watch?v=AjFRxOmpVFk&list=PLja2--Az4ZUyriJDzuXOj8cq_Tyxbu_Dq&index=12">video</a>                        
                         </abstract></td>
@@ -751,6 +753,8 @@
                         opposite corners of a box, as well as Hamiltonian walks. We use Monte Carlo
                         simulations to verify predicted values for three key exponents.
                         <br /><br />
+                        <a href="../talks/RB2022_Aleks.pdf">pdf</a>
+                        &nbsp;&nbsp;&nbsp;
                         <!-- <a href="https://youtu.be/AjFRxOmpVFk">video</a> -->
                         <a href="https://www.youtube.com/watch?v=AjFRxOmpVFk&list=PLja2--Az4ZUyriJDzuXOj8cq_Tyxbu_Dq&index=12">video</a>                        
                         </abstract></td>
