changed talk title for Aleks

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -346,7 +346,7 @@
                     <td>Aleks Owczarek</td>
                     <td><em> 
                             <a href="javascript: void(0);" onclick="toggle('abstract9910');toggle('abstract10')">
-                            Critical scaling of lattice polymers confined to a box without endpoint restriction
+                                SAW in a box
                             </a> 
                     </em></td>
                 </tr>
@@ -736,7 +736,7 @@
                 <tr>
                     <td  colspan="2"><em> 
                             <a href="javascript: void(0);" onclick="toggle('abstract9910');toggle('abstract10')">
-                            Critical scaling of lattice polymers confined to a box without endpoint restriction
+                            SAW in a box
                             </a> 
                     </em></td>
                 </tr>
