fixed mobile links

--- a/brak/index.html
+++ b/brak/index.html
@@ -61,7 +61,7 @@
                     <h3>
                         <!-- <a href="register">Register</a><br/> -->
                         <a href="program">Program</a><br/>
-                        <a href="richard">Richard</a>
+                        <a href="richard">Richard</a><br/>
                         <a href="photos">Photos</a>
                     </h3>
                 </div>
