added pdf from buks

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -183,6 +183,8 @@
                     <td  colspan="2"><abstract id="abstract2" style="display:none;">
                         In this talk I give a brief overview of some basic methods for obtaining free energies of cubic lattice models of adsorbing and pulled polymers in terms of the free energies of adsorbing and pulled self-avoiding walks.  In addition to pulling adsorbing spiders (these are models of adsorbing star polymers pulled in their central node, and with legs intersecting the adsorbing plane), I will also briefly look at the free energies of other models.  The phase diagrams of some of the models will also be discussed. This work was done jointly with Stu Whittington, and with Chris Soteros.
                         <br /><br />
+                        <a href="../talks/RB2022_Buks.pdf">pdf</a>
+                        &nbsp;&nbsp;&nbsp;
                         <!-- <a href="https://youtu.be/Jx7XpU1G7DA">video</a> -->                        
                         <a href="https://www.youtube.com/watch?v=Jx7XpU1G7DA&list=PLja2--Az4ZUyriJDzuXOj8cq_Tyxbu_Dq&index=5">video</a>                        
                         </abstract></td>
@@ -549,6 +551,8 @@
                     <td  colspan="2"><abstract id="abstract992" style="display:none;">
                         In this talk I give a brief overview of some basic methods for obtaining free energies of cubic lattice models of adsorbing and pulled polymers in terms of the free energies of adsorbing and pulled self-avoiding walks.  In addition to pulling adsorbing spiders (these are models of adsorbing star polymers pulled in their central node, and with legs intersecting the adsorbing plane), I will also briefly look at the free energies of other models.  The phase diagrams of some of the models will also be discussed. This work was done jointly with Stu Whittington, and with Chris Soteros.
                         <br /><br />
+                        <a href="../talks/RB2022_Buks.pdf">pdf</a>
+                        &nbsp;&nbsp;&nbsp;
                         <!-- <a href="https://youtu.be/Jx7XpU1G7DA">video</a> -->                        
                         <a href="https://www.youtube.com/watch?v=Jx7XpU1G7DA&list=PLja2--Az4ZUyriJDzuXOj8cq_Tyxbu_Dq&index=5">video</a>                        
                         </abstract></td>
