--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -264,6 +264,8 @@
                                 <br />
                                 This work, with Nick Beaton and Nathan Clisby, is an attempt to adapt existing algorithms to polygons in R3 of fixed topology. It is very much a work in progress, but I will report on our  attempts at trying to coerce the (very fast) pivot algorithm to respect topology.
                         <br /><br />
+                        <a href="../talks/RB2022_Andrew.pdf">pdf</a>
+                        &nbsp;&nbsp;&nbsp;
                         <!-- <a href="https://youtu.be/aOAf0lM_QTI">video</a> -->
                         <a href="https://www.youtube.com/watch?v=aOAf0lM_QTI&list=PLja2--Az4ZUyriJDzuXOj8cq_Tyxbu_Dq&index=8">video</a>                        
                         </abstract></td>
@@ -639,6 +641,8 @@
                                 <br />
                                 This work, with Nick Beaton and Nathan Clisby, is an attempt to adapt existing algorithms to polygons in R3 of fixed topology. It is very much a work in progress, but I will report on our  attempts at trying to coerce the (very fast) pivot algorithm to respect topology.
                         <br /><br />
+                        <a href="../talks/RB2022_Andrew.pdf">pdf</a>
+                        &nbsp;&nbsp;&nbsp;
                         <!-- <a href="https://youtu.be/aOAf0lM_QTI">video</a> -->
                         <a href="https://www.youtube.com/watch?v=aOAf0lM_QTI&list=PLja2--Az4ZUyriJDzuXOj8cq_Tyxbu_Dq&index=8">video</a>                        
                         </abstract></td>
