fixed links to localhost

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                     href="https://scholar.google.com.au/citations?hl=en&user=8kHXJhAAAAAJ">Google
                     Scholar</a>;
                 <a
-                    href="http://localhost/projects/sm_simulator/">
+                    href="https://clisby.net/projects/sm_simulator/">
                     visualisation of the pivot algorithm</a>
                 for sampling self-avoiding walks;
                 <a
-                    href="http://localhost/projects/hamiltonian_path/">visualisation
+                    href="http://clisby.net/projects/hamiltonian_path/">visualisation
                     of the backbite algorithm</a> for sampling
                 Hamiltonian paths.
                 </p>
