--- a/teaching/alerts/index.html
+++ b/teaching/alerts/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Google Alerts for detection of contract cheating</title>
-    <link rel="canonical" href="/teaching/alerts" />
+    <link rel="canonical" href="/teaching/alerts/" />
     <link rel="stylesheet" type="text/css" href="/css/nc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
