Added link to claylike

--- a/claylike/index.html
+++ b/claylike/index.html
@@ -38,8 +38,14 @@
                 <h4 style="text-align:center;font-weight: normal;">
                     by Grey Clisby de la Piedad
                 </h4>
-                <div class="spacer"></div>
 
+<h4 style="text-align:left;font-weight: normal;">
+                (Winner of the 2022 Hachette Australia Prize for Young Writers
+                in the category of fiction, published by Express Media
+                <a
+                    href="https://expressmedia.org.au/news/the-2022-hap-winner-fiction/"><em>here</em></a>.)
+            </h4>
+                <div class="spacer"></div>
 
 
 <p>She was a small baby that grew into a large girl. She knew this, though not why it mattered. She knew that it did; she knew that large boys were good and large girls were bad, and that boys that were larger than her found it very easy to pull the ground from her feet and rub dirt into her skin. She knew that the dirt caked against her face, and that though she cried when her mother washed it off, her father did not care.</p>
