added findingstones images so that they are saved locally

--- a/brak/findingstones/index.html
+++ b/brak/findingstones/index.html
@@ -322,7 +322,7 @@
 
               "
               >
-              <noscript><img src="https://images.squarespace-cdn.com/content/v1/51f75feee4b09c0de4823047/1375168040194-RMHV9JMPCCP8KHIAQ09M/Throne+roon+Inner+May+18%2C+2013.jpg" alt="Throne roon Inner May 18, 2013.jpg" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/51f75feee4b09c0de4823047/1375168040194-RMHV9JMPCCP8KHIAQ09M/Throne+roon+Inner+May+18%2C+2013.jpg" data-image="https://images.squarespace-cdn.com/content/v1/51f75feee4b09c0de4823047/1375168040194-RMHV9JMPCCP8KHIAQ09M/Throne+roon+Inner+May+18%2C+2013.jpg" data-image-dimensions="1024x472" data-image-focal-point="0.5,0.5" alt="Throne roon Inner May 18, 2013.jpg" data-load="false" data-image-id="51f76628e4b06887950ba6b3" data-type="image" />
+              <noscript><img src="img/Throne+roon+Inner+May+18%2C+2013.jpg" alt="Throne roon Inner May 18, 2013.jpg" /></noscript><img class="thumb-image" data-src="img/Throne+roon+Inner+May+18%2C+2013.jpg" data-image="img/Throne+roon+Inner+May+18%2C+2013.jpg" data-image-dimensions="1024x472" data-image-focal-point="0.5,0.5" alt="Throne roon Inner May 18, 2013.jpg" data-load="false" data-image-id="51f76628e4b06887950ba6b3" data-type="image" />
             </div>
           </div>
         
@@ -415,7 +415,7 @@
 
               "
               >
-              <noscript><img src="https://images.squarespace-cdn.com/content/v1/51f75feee4b09c0de4823047/1375168254592-MTCJVFZXR4IZ2JFK2AOE/upperThrone+room+01.JPG" alt="upperThrone room 01.JPG" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/51f75feee4b09c0de4823047/1375168254592-MTCJVFZXR4IZ2JFK2AOE/upperThrone+room+01.JPG" data-image="https://images.squarespace-cdn.com/content/v1/51f75feee4b09c0de4823047/1375168254592-MTCJVFZXR4IZ2JFK2AOE/upperThrone+room+01.JPG" data-image-dimensions="2048x1024" data-image-focal-point="0.5,0.5" alt="upperThrone room 01.JPG" data-load="false" data-image-id="51f766fee4b09c0de48239b1" data-type="image" />
+              <noscript><img src="img/upperThrone+room+01.JPG" alt="upperThrone room 01.JPG" /></noscript><img class="thumb-image" data-src="img/upperThrone+room+01.JPG" data-image="img/upperThrone+room+01.JPG" data-image-dimensions="2048x1024" data-image-focal-point="0.5,0.5" alt="upperThrone room 01.JPG" data-load="false" data-image-id="51f766fee4b09c0de48239b1" data-type="image" />
             </div>
           </div>
         
