modified findingstones slightly as images not rendering

--- a/brak/findingstones/index.html
+++ b/brak/findingstones/index.html
@@ -322,7 +322,7 @@
 
               "
               >
-              <noscript><img src="img/Throne+roon+Inner+May+18%2C+2013.jpg" alt="Throne roon Inner May 18, 2013.jpg" /></noscript><img class="thumb-image" data-src="img/Throne+roon+Inner+May+18%2C+2013.jpg" data-image="img/Throne+roon+Inner+May+18%2C+2013.jpg" data-image-dimensions="1024x472" data-image-focal-point="0.5,0.5" alt="Throne roon Inner May 18, 2013.jpg" data-load="false" data-image-id="51f76628e4b06887950ba6b3" data-type="image" />
+              <img src="img/Throne+roon+Inner+May+18%2C+2013.jpg" alt="Throne roon Inner May 18, 2013.jpg" />
             </div>
           </div>
         
