--- a/StudentConference/index.html
+++ b/StudentConference/index.html
@@ -110,6 +110,10 @@ Sergey Suslov, Zhenzhen Chen, Salam Kamoona, John McCloughan, with
 Nathan Clisby as the organiser.
 </p>
 <p>
+Thanks to Jordan and Sleeba for helping to test the technology and set up the
+afternoon tea.
+</p>
+<p>
 The prize for best talk as adjudged by academic staff was jointly awarded to
 Jordan Orchard and David Morselli, with each to receive a certificate and a
 prize of $100, as well as eternal glory as the first recipients of what promises
