--- a/StudentConference/index.html
+++ b/StudentConference/index.html
@@ -125,19 +125,19 @@ to be a hotly contested annual prize.
 
 <h3>Program</h3>
 <table>
-  <tr>
-    <th width="10%">Time</th>
-    <th width="25%">Speaker</th>
-    <th width="65%">Title</th>
-  </tr>
+  <!-- <tr> -->
+  <!--   <th width="10%">Time</th> -->
+  <!--   <th width="25%">Speaker</th> -->
+  <!--   <th width="65%">Title</th> -->
+  <!-- </tr> -->
   <tr>
     <td>1:55</td>
     <th colspan="2">Welcome</th>
   </tr>
   <tr>
-    <td>2:00</td>
-    <td>Jordan Orchard</td>
-    <td><a href="talks2023/Orchard.pdf">A deterministic map for particle dynamics in polygonal billiard channels</a></td>
+    <td width="10%">2:00</td>
+    <td width="25%">Jordan Orchard</td>
+    <td width="65%"><a href="talks2023/Orchard.pdf">A deterministic map for particle dynamics in polygonal billiard channels</a></td>
   </tr>
   <tr>
     <td>2:18</td>
@@ -209,7 +209,7 @@ recording!
 </a>
 <figcaption>
 The audience at the end of proceedings - from left to right Emily, Sergey,
-Jordan, Milton, Billy, Edoardo, Ricardo, Sleeba, Alex.
+Jordan, Milton, Billy, Edoardo, Riccardo, Sleeba, Alex.
 </figcaption>
 </figure>
 <figure>
