--- a/StudentConference/index.html
+++ b/StudentConference/index.html
@@ -111,7 +111,8 @@ Nathan Clisby as the organiser.
 </p>
 <p>
 Thanks to Jordan and Sleeba for helping to test the technology and set up the
-afternoon tea.
+afternoon tea, and to Ant for troubleshooting some Zoom issues for one of the
+speakers.
 </p>
 <p>
 The prize for best talk as adjudged by academic staff was jointly awarded to
