--- a/StudentConference/index.html
+++ b/StudentConference/index.html
@@ -104,7 +104,7 @@ Jordan Orchard,
  Solvej Knudsen.
 </p>
 <p>
-Participants were Federico Frascoli, Ant Sowards, Mallin Sowards,
+Participants were Federico Frascoli, Ant Sowards,
 Billy Todd, Emily Cook, Louise Olsen-Kettle, Nadia Sukhorukova,
 Sergey Suslov, Zhenzhen Chen, Salam Kamoona, John McCloughan, with
 Nathan Clisby as the organiser.
@@ -219,6 +219,14 @@ Jordan, Milton, Billy, Edoardo, Riccardo, Sleeba, Alex.
 </a>
 <figcaption>
 Ruiqi
+</figcaption>
+</figure>
+<figure>
+<a href="photos2023/Ant.png">
+<img src="photos2023/Ant_small.png" alt="" width="70%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+</a>
+<figcaption>
+Ant
 </figcaption>
 </figure>
 <figure>
