--- a/StudentConference/index.html
+++ b/StudentConference/index.html
@@ -226,7 +226,7 @@ Ruiqi
 <img src="photos2023/Ant_small.png" alt="" width="70%" style="min-width:200px;margin: 10px 10px 10px 10px" />
 </a>
 <figcaption>
-Ant
+Ant and a mystery guest
 </figcaption>
 </figure>
 <figure>
