--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                     of Richard Brak</a>.
                 </p>
                 <p>
+                <b>June, 2023:</b> Details of the <a
+                    href="https://clisby.net/StudentConference/">
+                    Swinburne Maths HDR Student Conference
+                    </a>.
+                </p>
+                <p>
                 <b>Recent articles (updated April 2021)</b>
                 </p>
                 <ul>
