Added Ruiqi talk

--- a/StudentConference/index.html
+++ b/StudentConference/index.html
@@ -183,8 +183,7 @@ to be a hotly contested annual prize.
   <tr>
     <td>4:54</td>
     <td>Ruiqi Sun</td>
-    <!-- <td><a href="talks2023/Sun.pdf">Statistical mechanics on low dimensional system</a></td> -->
-    <td>Statistical mechanics on low dimensional system</td>
+    <td><a href="talks2023/Sun.pdf">Statistical mechanics on low dimensional system</a></td>
   </tr>
   <tr>
     <td>5:12</td>
