--- a/guttmann2025/index.html
+++ b/guttmann2025/index.html
@@ -40,10 +40,23 @@
                         <a href="images/TonyGuttmann.png">
                 <img src="images/TonyGuttmann.png" alt="Tony Guttmann" width="100%" style="margin: 10px 0px 0px 10px" />
                         </a>
+                        <a href="images/TonyParisMarathon.png">
+                <img src="images/TonyParisMarathon.png" alt="Tony Guttmann" width="100%" style="margin: 10px 0px 0px 10px" />
+                        </a>
                         <!-- <figcaption> --> 
                         <!-- <small>Tony Guttmann.</small> -->
                         <!-- </figcaption> -->
                         </figure>
+                        <br />
+
+                        <!-- <figure style="width:27%;min-width:100px;float:right"> -->
+                        <!-- <a href="images/TonyParisMarathon.png"> -->
+                <!-- <img src="images/TonyParisMarathon.png" alt="Tony Guttmann" width="100%" style="margin: 10px 0px 0px 10px" /> -->
+                        <!-- </a> -->
+                        <!-- <1!-- <figcaption> --1> --> 
+                        <!-- <1!-- <small>Tony Guttmann.</small> --1> -->
+                        <!-- <1!-- </figcaption> --1> -->
+                        <!-- </figure> -->
 
                 <div class="desktop">
                     <h3>
@@ -202,6 +215,19 @@
     Tim Garoni
     </li>
 </ul>
+<br/>
+            <p>
+            <figure>
+            <center>
+                <img src="images/TonyAndSusette.png" alt="Tony and Susette"
+                width="65%"
+                style="min-width:200px;margin: 10px 10px 10px 10px" />
+            <figcaption>
+                Tony and Susette.
+                </figcaption>
+            </figure>
+            </center>
+            </p>
 <br/>
             <p>
             <figure>
