Formatting changes for Guttmann 2025

--- a/guttmann2025/index.html
+++ b/guttmann2025/index.html
@@ -189,19 +189,6 @@
                 Paul Zinn-Justin
                 </li>
             </ul>
-            <p>
-            The conference venue is the Evan Williams Theatre, in the Peter Hall
-            Building of the University of Melbourne. Visitors should access the
-            Peter Hall Building via the western entrance as shown on the map
-            below. The <span style="color:red;">red marker shows the western
-                entrance</span>, and the 
-            <span style="color:BlueViolet;">purple marker shows the Evan Williams
-                Theatre</span>.
-            </p>
-            <img src="./images/MapOfEvanWilliamsTheatre.png" alt="Evan Williams
-            Theatre directions"
-            width="80%" style="min-width:200px;margin: 10px 10px 10px 10px" />
-
 <br/>
 <h3>Organisers</h3>
 <ul>
@@ -215,7 +202,29 @@
     Tim Garoni
     </li>
 </ul>
+<!-- <p style="font-size:0.8em"> -->
+<p>
+If you have any
+queries please contact Nathan Clisby at <a
+    href="mailto:nclisby@swin.edu.au"> nclisby@swin.edu.au</a>
+</p>
 <br/>
+<h3>Location</h3>
+            <p>
+            The conference venue is the Evan Williams Theatre, in the Peter Hall
+            Building of the University of Melbourne. Visitors should access the
+            Peter Hall Building via the western entrance as shown on the map
+            below. The <span style="color:red;">red marker shows the western
+                entrance</span>, and the 
+            <span style="color:BlueViolet;">purple marker shows the Evan Williams
+                Theatre</span>.
+            </p>
+            <img src="./images/MapOfEvanWilliamsTheatre.png" alt="Evan Williams
+            Theatre directions"
+            width="70%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+
+<br/>
+<h3>Bonus material</h3>
             <p>
             <figure>
             <center>
@@ -245,11 +254,6 @@
             State Phys, <b>6</b>: 945-954 (1973).</a>
                 </figcaption>
             </figure>
-            </p>
-            <p style="font-size:0.8em">
-            If you have any
-            queries please contact Nathan Clisby at <a
-                href="mailto:nclisby@swin.edu.au"> nclisby@swin.edu.au</a>
             </p>
             </div> <!-- content -->
         </div> <!-- contentblock -->
