--- a/guttmann2025/index.html
+++ b/guttmann2025/index.html
@@ -43,20 +43,9 @@
                         <a href="images/TonyParisMarathon.png">
                 <img src="images/TonyParisMarathon.png" alt="Tony Guttmann" width="100%" style="margin: 10px 0px 0px 10px" />
                         </a>
-                        <!-- <figcaption> --> 
-                        <!-- <small>Tony Guttmann.</small> -->
-                        <!-- </figcaption> -->
                         </figure>
                         <br />
 
-                        <!-- <figure style="width:27%;min-width:100px;float:right"> -->
-                        <!-- <a href="images/TonyParisMarathon.png"> -->
-                <!-- <img src="images/TonyParisMarathon.png" alt="Tony Guttmann" width="100%" style="margin: 10px 0px 0px 10px" /> -->
-                        <!-- </a> -->
-                        <!-- <1!-- <figcaption> --1> --> 
-                        <!-- <1!-- <small>Tony Guttmann.</small> --1> -->
-                        <!-- <1!-- </figcaption> --1> -->
-                        <!-- </figure> -->
 
                 <div class="desktop">
                     <h3>
@@ -74,7 +63,7 @@
                 </div>
 
                 <p>
-                From Monday 30 June to Wednesday 2 July we will hold a
+                From Monday 30 June to Wednesday 2 July, 2025 we will hold a
                 conference in honour of Tony Guttmann on the occasion of 
                 his 80th birthday.
             </p>
