--- a/guttmann2025/index.html
+++ b/guttmann2025/index.html
@@ -213,6 +213,30 @@ queries please contact Nathan Clisby at <a
             width="70%" style="min-width:200px;margin: 10px 10px 10px 10px" />
 
 <br/>
+<h3>Sponsors</h3>
+<table>
+<tbody>
+<tr>
+<tr>
+<td style="text-align: center;"><img decoding="async" style="float: right; border: 10px solid transparent;" src="images/unimelb.png" alt="unimelb logo" height="100" /></td>
+<td></td>
+<td style="vertical-align: middle;"><a href="https://ms.unimelb.edu.au/">School of Mathematics and Statistics, University of Melbourne</a></td>
+</tr>
+<td style="text-align: center;"><img decoding="async" style="float: right;
+    border: 10px solid transparent;" src="images/monash.png" alt="Monash logo" width="200" /></td>
+<td></td>
+<td style="vertical-align: middle;"><a href="https://www.monash.edu/science/schools/school-of-mathematics">School of Mathematics, Monash University</a></td>
+</tr>
+<tr>
+<td style="text-align: center;"><img decoding="async" style="float: right; border: 10px solid transparent;" src="images/swinburne.png" alt="swin logo" height="100" /></td>
+<td></td>
+<td style="vertical-align: middle;"><a
+        href="https://www.swinburne.edu.au/about/our-structure/organisational-structure/schools-departments/school-science-computing-engineering-technologies/">School
+        of Science, Computing and Emerging Technologies, Swinburne University of Technology</a></td>
+</tr>
+</tbody>
+</table>
+<br/>
 <h3>Bonus material</h3>
             <p>
             <figure>
